* Lua: new "OnHeartBeat" callback called at regular interval provided that
       you have configured "LuaHeartBeatPeriod" > 0.
* "ExtraMainDicomTags" configuration now accepts Dicom Sequences.  Sequences are
  stored in a dedicated new metadata "MainDicomSequences".  This should improve
  DicomWeb QIDO-RS and avoid warnings like "Accessing Dicom tags from storage when 
  accessing series : 0040,0275"


Maintenance
-----------

* Housekeeper plugin: Fix resume of previous processing
* Added missing MOVEPatientRootQueryRetrieveInformationModel in 
  DicomControlUserConnection::SetupPresentationContexts()
* Improved HttpClient error logging (add method + url)


REST API
--------

* API version upgraded to 18
* /system is now reporting "DatabaseServerIdentifier"
* Added an Asynchronous mode to /modalities/../move.
* "RequestedTags" option can now include DICOM sequences.

Plugins
-------

* New function in the SDK: "OrthancPluginGetDatabaseServerIdentifier"


OrthancFramework (C++)
----------------------

* DicomMap::ParseMainDicomTags has been deprecated -> retrieve "full" tags
  and use DicomMap::FromDicomAsJson instead


Version 1.11.0 (2022-05-09)
===========================

General
-------

* New configuration "ExtraMainDicomTags" to store more tags in the Index DB
  to speed up, e.g, building C-Find, dicom-web or tools/find answers
* New sample plugin: "Housekeeper" that will re-construct the DB/Storage
  when it detects there is room for improvements, e.g:
  - if files were stored with a version of Orthanc prior to 1.9.1,
    the storage might still contain dicom-as-json files that are not needed
    anymore -> it will remove them
  - if "ExtraMainDicomTags" has changed.
  - if "StorageCompression" or "IngestTranscoding" has chagned.
* New configuration "Warnings" to enable/disable individual warnings that can
  be identified by a W0XX prefix in the logs.
  These warnings have been added:
  - W001_TagsBeingReadFromStorage
  - W002_InconsistentDicomTagsInDb